# stickman-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Levels/: level1.txt  level2.txt
src/: attack.cpp  attack.h  box.cpp  box.h  collision.cpp  collision.h  debugframe.cpp  debugframe.h  direction.h  driver.cpp  enemy.h  enemyai.cpp  enemyai.h  entity.cpp  entity.h  float2.cpp  float2.h  game.cpp  game.h  gamemode.h  gamestate.h  inputmanager.h  inputs.cpp  inputs.h  level.cpp  level.h  player.cpp  player.h  recorder.cpp  recorder.h  stickmanconfig.h.in  terrain.cpp  terrain.h  utils.cpp  utils.h  weapon.h
src/entitystates/: ducking.cpp  falling.cpp  groundsliding.cpp  jumping.cpp  standing.cpp  wallsliding.cpp
src/playerstates/: ducking.cpp  enemy.h  falling.cpp  groundsliding.cpp  jumping.cpp  standing.cpp  wallsliding.cpp
